saude-publica-airflow/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: saude-airflow
  labels:
    name: saude-airflow
    environment: production
    project: saude-publica
